# slowfetch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cache.rs  config.toml  configloader.rs  dostuff.rs  helpers.rs  main.rs  themes.rs
src/assets/: arch.txt  archsmol.txt  cachy.txt  cachysmol.txt  cat.txt  fedora.txt  fedorasmol.txt  gentoo.txt  gentoosmol.txt  nix.txt  nixsmol.txt  oldgentoo.txt  pika.txt  pikasmol.txt  ubuntu.txt  ubuntusmol.txt  void.txt  voidsmol.txt
src/assets/default/: narrow.txt  wide.txt
src/modules/: asciimodule.rs  coremodules.rs  fontmodule.rs  gpumodule.rs  hardwaremodules.rs  imagemodule.rs  mod.rs  userspacemodules.rs
src/prettyconfig/: helpers.rs  input.rs  mod.rs  navigation.rs  prettyconfig.rs  preview.rs  render.rs  save.rs
src/visuals/: asciiengine.rs  colorcontrol.rs  imagerender.rs  mod.rs  renderer.rs  terminalsize.rs
