[package]
name = "slowfetch"
version = "0.2.7"
edition = "2024"

[profile.release]
opt-level = 3
lto = true  # Link Time Optimization
debug = true
codegen-units = 1  # Reduce the number of codegen units for more optimization
panic = "abort"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
inkline = "1.0"
tintify = "1.0"
kitty_image = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
libc = "0.2"
memchr = "2.7"

[profile.bench]
debug = true